--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "1. Check dataset\n",
     "2. Cleaning\n",
-    "3. Preprocessing"
+    "3. Preprocessing\n",
+    "4. Data Split (using stratified sampling)"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +186,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "id           int64\n",
+      "keyword     object\n",
+      "location    object\n",
+      "text        object\n",
+      "target       int64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Types of values in each column\n",
+    "print(train.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,268 +235,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7613"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[TRAIN]keyword:  0.01\n",
-      "[TRAIN]location:  0.33\n",
-      "[TEST]keyword:  0.01\n",
-      "[TEST]location:  0.34\n"
+      "Ratio of missing values in training dataset\n",
+      "missing keyword:  0.01\n",
+      "missing location:  0.33 \n",
+      "\n",
+      "Ratio of missing values in testing dataset\n",
+      "missing keyword:  0.01\n",
+      "missing location:  0.34\n"
      ]
     }
    ],
    "source": [
     "# Check percentage of missing values\n",
-    "print(\"[TRAIN]keyword: \", str(round(train[\"keyword\"].isnull().sum()/train.shape[0], 2)))\n",
-    "print(\"[TRAIN]location: \", str(round(train[\"location\"].isnull().sum()/train.shape[0], 2)))\n",
-    "print(\"[TEST]keyword: \", str(round(test[\"keyword\"].isnull().sum()/test.shape[0], 2)))\n",
-    "print(\"[TEST]location: \", str(round(test[\"location\"].isnull().sum()/test.shape[0], 2)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.73% survived\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "      <th>target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>48</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Birmingham</td>\n",
-       "      <td>@bbcmtd Wholesale Markets ablaze http://t.co/l...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32</th>\n",
-       "      <td>49</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Est. September 2012 - Bristol</td>\n",
-       "      <td>We always try to bring the heavy. #metal #RT h...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>50</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>AFRICA</td>\n",
-       "      <td>#AFRICANBAZE: Breaking news:Nigeria flag set a...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Philadelphia, PA</td>\n",
-       "      <td>Crying out for more! Set me ablaze</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>53</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>On plus side LOOK AT THE SKY LAST NIGHT IT WAS...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id keyword                       location  \\\n",
-       "31  48  ablaze                     Birmingham   \n",
-       "32  49  ablaze  Est. September 2012 - Bristol   \n",
-       "33  50  ablaze                         AFRICA   \n",
-       "34  52  ablaze               Philadelphia, PA   \n",
-       "35  53  ablaze                     London, UK   \n",
-       "\n",
-       "                                                 text  target  \n",
-       "31  @bbcmtd Wholesale Markets ablaze http://t.co/l...       1  \n",
-       "32  We always try to bring the heavy. #metal #RT h...       0  \n",
-       "33  #AFRICANBAZE: Breaking news:Nigeria flag set a...       1  \n",
-       "34                 Crying out for more! Set me ablaze       0  \n",
-       "35  On plus side LOOK AT THE SKY LAST NIGHT IT WAS...       0  "
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Null values dropped training dataset\n",
-    "k_notnull_tr = train[train[\"keyword\"].notnull()]\n",
-    "notnull_tr = k_notnull_tr[k_notnull_tr[\"location\"].notnull()]\n",
-    "print(str(round(notnull_tr.shape[0]/train.shape[0], 4)*100)+\"% survived\")\n",
-    "notnull_tr.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.14% survived\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>keyword</th>\n",
-       "      <th>location</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>46</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>London</td>\n",
-       "      <td>Birmingham Wholesale Market is ablaze BBC News...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>47</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Niall's place | SAF 12 SQUAD |</td>\n",
-       "      <td>@sunkxssedharry will you wear shorts for race ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>51</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>NIGERIA</td>\n",
-       "      <td>#PreviouslyOnDoyinTv: Toke MakinwaÛªs marriag...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>58</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Live On Webcam</td>\n",
-       "      <td>Check these out: http://t.co/rOI2NSmEJJ http:/...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>60</td>\n",
-       "      <td>ablaze</td>\n",
-       "      <td>Los Angeles, Califnordia</td>\n",
-       "      <td>PSA: IÛªm splitting my personalities.\\n\\n?? t...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    id keyword                        location  \\\n",
-       "15  46  ablaze                          London   \n",
-       "16  47  ablaze  Niall's place | SAF 12 SQUAD |   \n",
-       "17  51  ablaze                         NIGERIA   \n",
-       "18  58  ablaze                  Live On Webcam   \n",
-       "19  60  ablaze        Los Angeles, Califnordia   \n",
-       "\n",
-       "                                                 text  \n",
-       "15  Birmingham Wholesale Market is ablaze BBC News...  \n",
-       "16  @sunkxssedharry will you wear shorts for race ...  \n",
-       "17  #PreviouslyOnDoyinTv: Toke MakinwaÛªs marriag...  \n",
-       "18  Check these out: http://t.co/rOI2NSmEJJ http:/...  \n",
-       "19  PSA: IÛªm splitting my personalities.\\n\\n?? t...  "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Null values dropped testing dataset\n",
-    "k_notnull_te = test[test[\"keyword\"].notnull()]\n",
-    "notnull_te = k_notnull_te[k_notnull_te[\"location\"].notnull()]\n",
-    "print(str(round(notnull_te.shape[0]/test.shape[0], 4)*100)+\"% survived\")\n",
-    "notnull_te.head()"
+    "print(\"Ratio of missing values in training dataset\")\n",
+    "print(\"missing keyword: \", str(round(train[\"keyword\"].isnull().sum()/train.shape[0], 2)))\n",
+    "print(\"missing location: \", str(round(train[\"location\"].isnull().sum()/train.shape[0], 2)), \"\\n\")\n",
+    "\n",
+    "print(\"Ratio of missing values in testing dataset\")\n",
+    "print(\"missing keyword: \", str(round(test[\"keyword\"].isnull().sum()/test.shape[0], 2)))\n",
+    "print(\"missing location: \", str(round(test[\"location\"].isnull().sum()/test.shape[0], 2)))"
    ]
   },
   {
@@ -486,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. "
+    "## 3. Preprocessing"
    ]
   },
   {
@@ -494,7 +282,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Drop 'keyword' and 'location' columns\n",
+    "train = train.drop([\"keyword\", \"location\"], axis=1)\n",
+    "test = test.drop([\"keyword\", \"location\"], axis=1)\n",
+    "\n",
+    "train"
+   ]
   },
   {
    "cell_type": "markdown",
