--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -60,13 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing"
+    "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
@@ -279,15 +281,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6</td>\n",
+       "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7</td>\n",
+       "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                               text  target\n",
+       "0   1  Our Deeds are the Reason of this #earthquake M...       1\n",
+       "1   4             Forest fire near La Ronge Sask. Canada       1\n",
+       "2   5  All residents asked to 'shelter in place' are ...       1\n",
+       "3   6  13,000 people receive #wildfires evacuation or...       1\n",
+       "4   7  Just got sent this photo from Ruby #Alaska as ...       1"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Drop 'keyword' and 'location' columns\n",
+    "# Drop irrelevant columns\n",
     "train = train.drop([\"keyword\", \"location\"], axis=1)\n",
     "test = test.drop([\"keyword\", \"location\"], axis=1)\n",
     "\n",
-    "train"
+    "train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(train[\"text\"], train[\"target\"], \n",
+    "                                    test_size=0.3, random_state=0, stratify=train[\"target\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
+    "count_train = count_vectorizer.fit_transform(X_train.values)\n",
+    "count_test = count_vectorizer.transform(X_test.values)"
    ]
   },
   {
@@ -295,6 +394,16 @@
    "metadata": {},
    "source": [
     "## 4. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<text preprocessing>\n",
+    "- tweettoeknizer \n",
+    "- tokenize -> lower -> Counter() and .most_common()\n",
+    "- remove stop words stopwords.word('english')? english_stops?"
    ]
   },
   {
