NLP_DisasterTweets.ipynb

--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,8 @@
     "import pandas as pd\n",
     "from sklearn import feature_extraction, linear_model, model_selection, preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +355,7 @@
        "4   7  Just got sent this photo from Ruby #Alaska as ...       1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,25 +370,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5329, 2) (2284, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "# Data Split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train[\"text\"], train[\"target\"], \n",
-    "                                    test_size=0.3, random_state=0, stratify=train[\"target\"])"
+    "X_train, X_test, y_train, y_test = train_test_split(train.loc[:, \"id\":\"text\"], train[\"target\"], \n",
+    "                                    test_size=0.3, random_state=0, stratify=train[\"target\"])\n",
+    "\n",
+    "print(X_train.shape, X_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4812    6849\n",
+       "2080    2988\n",
+       "652      944\n",
+       "3528    5043\n",
+       "3007    4321\n",
+       "Name: id, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
-    "count_train = count_vectorizer.fit_transform(X_train.values)\n",
-    "count_test = count_vectorizer.transform(X_test.values)"
+    "# Store \"id\"\n",
+    "id_train = X_train[\"id\"]\n",
+    "id_test = X_test[\"id\"]\n",
+    "id_train.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5329, 16619)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert a collection of text documents to a matrix of token counts\n",
+    "count_vectorizer = CountVectorizer(stop_words=\"english\")\n",
+    "count_train = count_vectorizer.fit_transform(X_train[\"text\"].values)\n",
+    "count_test = count_vectorizer.transform(X_test[\"text\"].values)\n",
+    "\n",
+    "print(count_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "head not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000021?line=0'>1</a>\u001b[0m count_train\u001b[39m.\u001b[39;49mhead()\n",
+      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/scipy/sparse/_base.py:761\u001b[0m, in \u001b[0;36mspmatrix.__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    759\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetnnz()\n\u001b[1;32m    760\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 761\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(attr \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m not found\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: head not found"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -400,7 +470,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<text preprocessing>\n",
+    "text preprocessing\n",
+    "- Word2Vec\n",
     "- tweettoeknizer \n",
     "- tokenize -> lower -> Counter() and .most_common()\n",
     "- remove stop words stopwords.word('english')? english_stops?"
