--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -436,28 +436,29 @@
     "count_train = count_vectorizer.fit_transform(X_train[\"text\"].values)\n",
     "count_test = count_vectorizer.transform(X_test[\"text\"].values)\n",
     "\n",
-    "print(count_train.shape)"
+    "print(count_train.shape, count_train[10].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "head not found",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 20'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000021?line=0'>1</a>\u001b[0m count_train\u001b[39m.\u001b[39;49mhead()\n",
-      "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/scipy/sparse/_base.py:761\u001b[0m, in \u001b[0;36mspmatrix.__getattr__\u001b[0;34m(self, attr)\u001b[0m\n\u001b[1;32m    759\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgetnnz()\n\u001b[1;32m    760\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 761\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAttributeError\u001b[39;00m(attr \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m not found\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: head not found"
-     ]
+     "data": {
+      "text/plain": [
+       "<1x16619 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 12 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "count_train[5000]"
+   ]
   },
   {
    "cell_type": "markdown",
