--- a/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
+++ b/NLP_DisasterTweets/NLP_DisasterTweets.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "      dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,21 +658,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627],\n",
+       "       [-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627],\n",
+       "       [-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627],\n",
+       "       ...,\n",
+       "       [-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627],\n",
+       "       [-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627],\n",
+       "       [-0.02004962,  0.10037511,  0.07350621, ..., -0.11829799,\n",
+       "         0.03437611,  0.02708627]])"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((100,100)) + model1.wv['sky'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.02004962,  0.10037511,  0.07350621,  0.04939653, -0.03476002,\n",
+       "       -0.16195391,  0.04609038,  0.21808012, -0.16392478, -0.08426891,\n",
+       "       -0.02270396, -0.15489374, -0.02817422,  0.06093396,  0.03923214,\n",
+       "       -0.10855886,  0.01493815, -0.08206686, -0.02305904, -0.29797217,\n",
+       "        0.02627587,  0.02536908,  0.10857567, -0.05503755,  0.03082208,\n",
+       "        0.01130182, -0.09580877, -0.00886846, -0.14580329,  0.06464776,\n",
+       "        0.14711061, -0.05381641,  0.05042885, -0.11926185, -0.03723684,\n",
+       "        0.07290098,  0.03564359, -0.01150773,  0.01626032, -0.13782905,\n",
+       "        0.01676124, -0.0866912 , -0.12689015,  0.04537553,  0.09070694,\n",
+       "       -0.02262278, -0.10084937,  0.03906291,  0.04117893,  0.04786964,\n",
+       "        0.04090618, -0.09457989, -0.05056809, -0.0350938 , -0.06172173,\n",
+       "        0.02995279,  0.09060061, -0.07169975, -0.13605106,  0.01613214,\n",
+       "        0.01843433, -0.00498997,  0.05055493, -0.02341642, -0.14718884,\n",
+       "        0.15326908,  0.06144311,  0.03757308, -0.10605472,  0.10337409,\n",
+       "       -0.04746991,  0.08534503,  0.11295404, -0.00122165,  0.10584856,\n",
+       "        0.11460267,  0.0147836 ,  0.01760098, -0.04964292,  0.05653816,\n",
+       "       -0.0568042 , -0.10751303, -0.02019809,  0.1174906 , -0.01707814,\n",
+       "       -0.05999985,  0.03219199,  0.08759019,  0.09620593,  0.09315135,\n",
+       "        0.09065689,  0.1157776 ,  0.03986841, -0.04946531,  0.1945969 ,\n",
+       "        0.07013579,  0.09403934, -0.11829799,  0.03437611,  0.02708627])"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((100,)) + model1.wv['sky']  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Validate\n",
-    "\n",
-    "# words # list of words (stopwords are removed)\n",
-    "# stops # list of stopwords\n",
-    "# model1.wv['a'] # vetor for the word 'a'\n",
+    "# Validate\n",
     "\n",
     "vect_pred1 = [0]*X_train.shape[0]\n",
     "# vect_pred2 = [None]*X_train.shape[0]\n",
     "\n",
     "for n in range(X_train[\"text\"].size):   # n: 0 ~ 5328\n",
-    "    vector_for_sentence = np.zeros((100,100))\n",
+    "    vector_for_sentence = np.zeros((100,))\n",
     "    for s in sent_tokenize(X_train[\"text\"].iat[n,]):    # each sentence\n",
     "        for w in word_tokenize(s):     # each word\n",
     "            if w.lower() in words:\n",
@@ -682,35 +749,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5329, 100, 100) (100, 100)\n"
+      "(5329, 100) (100,)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323],\n",
-       "       [ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323],\n",
-       "       [ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323],\n",
-       "       ...,\n",
-       "       [ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323],\n",
-       "       [ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323],\n",
-       "       [ 1.87824123,  3.64435208,  4.23504359, ..., -2.26995379,\n",
-       "         1.73575195, -1.97714323]])"
+       "array([  1.87824123,   3.64435208,   4.23504359,  -0.41068251,\n",
+       "        -4.63730711,  -6.32231947,   4.73308132,  11.42079945,\n",
+       "        -7.02370445,  -4.22398061,  -1.56215076,  -5.52909299,\n",
+       "         2.07282457,  -1.98693506,   3.35851152,  -2.95525164,\n",
+       "         3.82276349,   0.83415046,  -1.3523636 , -10.83279147,\n",
+       "         1.28529542,  -0.99013823,   4.05472817,  -1.87462881,\n",
+       "        -0.69337517,  -0.97622588,   0.52045415,   0.23014493,\n",
+       "        -4.63207445,   7.15442551,   5.63590921,  -3.36491135,\n",
+       "        -1.91259414,  -5.70577049,  -1.46457552,   6.2304268 ,\n",
+       "         2.18510922,  -4.98247203,  -0.44931022,   1.15698252,\n",
+       "        -0.02305541,  -1.66599649,  -2.08747711,   2.87777406,\n",
+       "         2.83944537,  -2.13425469,   0.02489608,   1.06162516,\n",
+       "        -1.0508914 ,   1.86375692,  -0.16777957,  -2.44214951,\n",
+       "        -5.31533815,  -2.70181194,  -6.44931329,   1.91004869,\n",
+       "         1.63391038,   1.26407902,  -4.77537998,  -1.88404892,\n",
+       "         2.97318142,   1.10970858,   2.28684221,  -1.4077214 ,\n",
+       "        -3.71938299,   5.0368731 ,   3.78883676,   4.17878628,\n",
+       "        -4.43173845,  -0.07493475,   2.27890958,   2.73233321,\n",
+       "         4.15504767,   4.75143393,   2.84145374,   4.32902252,\n",
+       "         2.40523386,   1.28398819,  -3.9577451 ,   3.14820769,\n",
+       "        -2.22240962,  -6.37989058,  -1.34385499,   3.28646056,\n",
+       "        -3.27517747,  -3.33492281,   1.22528406,   4.69604728,\n",
+       "         4.70226187,   1.943407  ,   2.43862993,   4.4622316 ,\n",
+       "         0.7919905 ,   0.20118063,   7.85437417,   2.78044774,\n",
+       "        -0.2786548 ,  -2.26995379,   1.73575195,  -1.97714323])"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,33 +797,32 @@
    "source": [
     "vect_pred1 = np.array(vect_pred1)\n",
     "print(vect_pred1.shape, vect_pred1[5328].shape)\n",
-    "vect_pred1[6]\n"
+    "vect_pred1[6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Xtr1: (5329, 10001)  Ytr1: (5329, 1)\n"
+      "Xtr1: (5329, 101)  Ytr1: (5329, 1)\n"
      ]
     }
    ],
    "source": [
-    "# Reshape\n",
-    "Xtr1 = vect_pred1.reshape(vect_pred1.shape[0], vect_pred1.shape[1]*vect_pred1.shape[2])\n",
-    "Xtr1 = np.hstack([np.ones((Xtr1.shape[0],1)), Xtr1[:,:] ])   # add intercepts(ones)\n",
+    "# Add intercepts(ones)\n",
+    "Xtr1 = np.hstack([np.ones((vect_pred1.shape[0],1)), vect_pred1[:,:] ])   \n",
     "Ytr1 = y_train\n",
     "print(\"Xtr1: \" + str(Xtr1.shape), \" Ytr1: \"+ str(Ytr1.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,12 +863,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "ename": "KeyError",
-     "evalue": "138",
+     "evalue": "3113",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -800,14 +878,14 @@
       "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/_libs/index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5198\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
       "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5206\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 138",
+      "\u001b[0;31mKeyError\u001b[0m: 3113",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 29'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=2'>3</a>\u001b[0m l_epoch_span \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m((\u001b[39m1\u001b[39m\u001b[39m+\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mn_span))\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m)    \u001b[39m# list of learning rates\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=3'>4</a>\u001b[0m init_weights \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39m1\u001b[39m,Xtr1\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=4'>5</a>\u001b[0m weights \u001b[39m=\u001b[39m train_weights(Xtr1, Ytr1, l_epoch_span, epoch_size, init_weights)\n",
-      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 28'\u001b[0m in \u001b[0;36mtrain_weights\u001b[0;34m(X, y, l_epoch_span, epoch_size, weights, threshold)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=21'>22</a>\u001b[0m ind \u001b[39m=\u001b[39m indices[b]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=22'>23</a>\u001b[0m prediction \u001b[39m=\u001b[39m predict(X[ind,:], weights)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=23'>24</a>\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(prediction \u001b[39m-\u001b[39m y[ind])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=24'>25</a>\u001b[0m sum_error \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m error\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=25'>26</a>\u001b[0m weights \u001b[39m=\u001b[39m weights \u001b[39m-\u001b[39m \u001b[39m1.00\u001b[39m \u001b[39m*\u001b[39m l_rate \u001b[39m*\u001b[39m (sum_error \u001b[39m/\u001b[39m batch_size) \u001b[39m*\u001b[39m X[ind,:]\n",
+      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 31'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=2'>3</a>\u001b[0m l_epoch_span \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m((\u001b[39m1\u001b[39m\u001b[39m+\u001b[39m(\u001b[39m2\u001b[39m\u001b[39m*\u001b[39mn_span))\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m3\u001b[39m)    \u001b[39m# list of learning rates\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=3'>4</a>\u001b[0m init_weights \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros((\u001b[39m1\u001b[39m,Xtr1\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000054?line=4'>5</a>\u001b[0m weights \u001b[39m=\u001b[39m train_weights(Xtr1, Ytr1, l_epoch_span, epoch_size, init_weights)\n",
+      "\u001b[1;32m/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb Cell 30'\u001b[0m in \u001b[0;36mtrain_weights\u001b[0;34m(X, y, l_epoch_span, epoch_size, weights, threshold)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=21'>22</a>\u001b[0m ind \u001b[39m=\u001b[39m indices[b]\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=22'>23</a>\u001b[0m prediction \u001b[39m=\u001b[39m predict(X[ind,:], weights)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=23'>24</a>\u001b[0m error \u001b[39m=\u001b[39m \u001b[39mabs\u001b[39m(prediction \u001b[39m-\u001b[39m y[ind])\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=24'>25</a>\u001b[0m sum_error \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m error\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/lucy/Projects/Personal_Projects/NLP_DisasterTweets/NLP_DisasterTweets.ipynb#ch0000053?line=25'>26</a>\u001b[0m weights \u001b[39m=\u001b[39m weights \u001b[39m-\u001b[39m \u001b[39m1.00\u001b[39m \u001b[39m*\u001b[39m l_rate \u001b[39m*\u001b[39m (sum_error \u001b[39m/\u001b[39m batch_size) \u001b[39m*\u001b[39m X[ind,:]\n",
       "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/frame.py:3505\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3503\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3504\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3505\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3506\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3507\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
       "File \u001b[0;32m~/Library/Python/3.8/lib/python/site-packages/pandas/core/indexes/base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 138"
+      "\u001b[0;31mKeyError\u001b[0m: 3113"
      ]
     }
    ],
